demo odb invalidation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/functions": "^1.2.0",
+    "@netlify/plugin-nextjs": "^4.23.2",
+    "@supabase/supabase-js": "^1.35.7",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
